@@ -91,6 +91,7 @@ gerritclient =
     project_branch_delete=gerritclient.commands.project:ProjectBranchDelete
     project_branch_list=gerritclient.commands.project:ProjectBranchList
     project_branch_show=gerritclient.commands.project:ProjectBranchShow
+    project_child_list=gerritclient.commands.project:ProjectChildList
     project_create=gerritclient.commands.project:ProjectCreate
     project_delete=gerritclient.commands.project:ProjectDelete
     project_description_set=gerritclient.commands.project:ProjectDescriptionSet
